add margin border, etc to lorem ipsum p and span

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,16 @@
     background-color: pink;
 
 }
+
+.ipsum{
+    border: 10px lightgreen ridge;
+    margin: 5px; 
+}
+
+p span{
+width: ;
+border-top: 2px black solid  ;
+border-bottom: 4px solid grey ;
+padding: width:5px ;
+margin: 0 5px;
+}
